<resources>
    <string name="app_name">NumberDraw</string>
    <string name="titleText">Set a range and pick a number!</string>
    <string name="default_range">default range: 0 - 10</string>
    <string name="min">Set minimum range:</string>
    <string name="set_min">Set a minimum number</string>
    <string name="set_max">Set a maximum number</string>
    <string name="set_range">Set Range</string>
    <string name="play">Play</string>
</resources>
